--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,23 @@
-  <header>
-    <!-- Navigation -->
-    <nav id="primary-menu">
-      <!-- Site Branding and Home Button -->
-      <a href="" class="header-logo">
-        <img alt="Tatlo logo" class="banner-img" src="./assets/images/tatlo-logo.jpg">
-      </a>
+<header>
+  <!-- Navigation -->
+  <nav id="primary-menu">
+    <!-- Site Branding and Home Button -->
+    <a href="{{ '/' | relative_url }}" class="header-logo">
+      <img alt="Tatlo logo" class="banner-img" src="{{ 'assets/images/tatlo-logo.jpg' | relative_url }}">
+    </a>
 
-      <!-- Hamburger Toggle for Mobile -->
-      <button class="hamburger-menu" onclick="menuToggle()">
-        <div class="top-bun burger-layer"></div>
-        <div class="burger burger-layer"></div>
-        <div class="bottom-bun burger-layer"></div>
-      </button>
+    <!-- Hamburger Toggle for Mobile -->
+    <button class="hamburger-menu" onclick="menuToggle()">
+      <div class="top-bun burger-layer"></div>
+      <div class="burger burger-layer"></div>
+      <div class="bottom-bun burger-layer"></div>
+    </button>
 
-      <!-- Navigation List -->
-      <ul class="menu-list">
-        <li class="menu-item"><a href="./about.html" class="menu-link">ABOUT</a></li>
-        <li class="menu-item"><a href="./cv.html" class="menu-link">CV</a></li>
-        <li class="menu-item"><a href="./contact.html" class="menu-link">CONTACT</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Navigation List -->
+    <ul class="menu-list">
+      <li class="menu-item"><a href="{{ 'pages/about/' | relative_url }}" class="menu-link">ABOUT</a></li>
+      <li class="menu-item"><a href="{{ 'pages/cv/'| relative_url }}" class="menu-link">CV</a></li>
+      <li class="menu-item"><a href="{{ 'pages/contact/ | relative_url }}" class="menu-link">CONTACT</a></li>
+    </ul>
+  </nav>
+</header>
