--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,18 @@
+---
+layout: compress
+---
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-{% include head.html %}
-  <body>
-{% include header.html %}
-    {{ content }}
-{% include footer.html %}
-  </body>
-  <script type="text/javascript" src="{{ '/assets/js/script.js' | relative_url }}"></script>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>{{ page.title }} - {{ site.title }}</title>
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+</head>
+<body>
+  {% include header.html %}
+  {{ content }}
+  {% include footer.html %}
+</body>
+<script type="text/javascript" src="{{ '/assets/js/script.js' | relative_url }}"></script>
 </html>
