--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,9 +8,7 @@
 
     <!-- Hamburger Toggle for Mobile -->
     <button class="hamburger-menu" onclick="menuToggle()">
-      <div class="top-bun burger-layer"></div>
-      <div class="burger burger-layer"></div>
-      <div class="bottom-bun burger-layer"></div>
+    {% include components/icon-burger.html %}
     </button>
 
     <!-- Navigation List -->
