--- a/_sass/abstracts/_fonts.sass
+++ b/_sass/abstracts/_fonts.sass
@@ -1,8 +1,10 @@
 @font-face
   font-family: "PT-RootUI"
   src: url("../fonts/PT-Root-UI_Medium.woff2")
+  font-display: swap
 
 @font-face
   font-family: "PT-RootUI"
   src: url("../fonts/PT-Root-UI_Bold.woff2")
   font-weight: bold
+  font-display: swap
