--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -1,8 +1,11 @@
-@import abstracts/media
-@import abstracts/colors
 @import abstracts/fonts
+@import abstracts/mixins
+@import abstracts/variables
+
 @import base/global
+
 @import components/hamburger
+
 @import layouts/header
 @import layouts/menu
 @import layouts/footer
