image work, and fix some issues to improve lighthouse score

--- a/_includes/components/img.html
+++ b/_includes/components/img.html
@@ -1,6 +1,6 @@
 {%
-  picture menu
-  {{ include.image }}
+  picture default
+  {{ include.src }}
   --alt {{ include.alt }}
-  --picture class="main-menu-image"
+  --img class="{{ include.class }}"
 %}
