--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,15 @@
   <nav id="primary-menu">
     <!-- Site Branding and Home Button -->
     <a href="{{ '/' | relative_url }}" class="header-logo">
-      <img alt="Tatlo logo" class="banner-img" src="{{ 'assets/images/tatlo-logo.jpg' | relative_url }}">
+      {% include components/img.html
+          src="assets/images/tatlo-logo.jpg"
+          alt="Tatlo logo"
+
+      %}
     </a>
 
     <!-- Hamburger Toggle for Mobile -->
-    <button class="hamburger-menu" onclick="menuToggle()">
+    <button class="hamburger-menu" onclick="menuToggle()" aria-label="hamburger menu button">
     {% include components/icon-burger.html %}
     </button>
 
@@ -15,7 +19,7 @@
     <ul class="menu-list">
       <li class="menu-item"><a href="{{ 'pages/about/' | relative_url }}" class="menu-link">ABOUT</a></li>
       <li class="menu-item"><a href="{{ 'pages/cv/'| relative_url }}" class="menu-link">CV</a></li>
-      <li class="menu-item"><a href="{{ 'pages/contact/ | relative_url }}" class="menu-link">CONTACT</a></li>
+      <li class="menu-item"><a href="mailto:tatloinfo@gmail.com" class="menu-link">CONTACT</a></li>
     </ul>
   </nav>
 </header>
