added js carousel

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       {% include components/img.html
           src="assets/images/tatlo-logo.jpg"
           alt="Tatlo logo"
-
+          class="banner-img"
       %}
     </a>
 
