--- a/_sass/layouts/_header.sass
+++ b/_sass/layouts/_header.sass
@@ -1,8 +1,8 @@
 header
-  padding: 1rem
+  margin: 16px
 
   @include tablet
-    padding: 1rem 0
+    margin: 16px 32px
 
 #primary-menu
   display: flex
