--- a/_sass/layouts/_footer.sass
+++ b/_sass/layouts/_footer.sass
@@ -1,6 +1,9 @@
 footer
-  min-width: 320px
-  padding: 1rem
+  margin: 16px
+
+  @include tablet
+    margin: 16px 32px
+    
   display: flex
   flex-direction: row
   justify-content: space-between
