--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -1,15 +1,7 @@
 ---
 layout: default
 ---
-<p>
-  {{ page.description }}
-</p>
-{% include sections/carousel.html %}
 
-<p>
-  <em>{{ page.title }}</em>
-  <br>
-  {{ page.date | date: "%Y" }}
-  <br>
-  {{ page.details }}
-</p>
+{% include sections/description.html %}
+{% include sections/carousel.html %}
+{% include sections/detail.html %}
