--- a/_sass/sections/_carousel.sass
+++ b/_sass/sections/_carousel.sass
@@ -31,7 +31,7 @@
 
 .slide
   width: 100%
-  max-height: 500px
+  height: 500px
   display: flex
   align-items: center
   justify-content: center
@@ -42,3 +42,21 @@
 .slide__image
   max-height: 100%
   width: auto
+
+.thumbnails
+  padding-top: 4px
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
+  gap: 4px
+
+.slide-thumb
+  width: 200px
+
+.active
+  outline: 4px solid black
+
+.btn-thumb
+    border: 0
+    padding: 0
+    background: $white
