--- a/_includes/sections/carousel.html
+++ b/_includes/sections/carousel.html
@@ -1,21 +1,29 @@
-<section class="carousel" aria-label="Gallery">
-
-  <button class="carousel-btn carousel-back" type="button" name="button" onclick="back()">
-    {% include components/chevron-left.svg %}
-  </button>
-  <button class="carousel-btn carousel-next" type="button" name="button" onclick="next()">
-    {% include components/chevron-right.svg %}
-  </button>
-
-
-  <div class="slide">
+<section class="" aria-label="Gallery">
+  <div class="carousel">
+    <button class="carousel-btn carousel-back" type="button" name="button" aria-label="previous image" onclick="back()">
+      {% include components/chevron-left.svg %}
+    </button>
+    <button class="carousel-btn carousel-next" type="button" name="button" aria-label="next image" onclick="next()">
+      {% include components/chevron-right.svg %}
+    </button>
+    <div class="slide">
+      {% for item in page.carousel %}
+      {% include components/img.html
+          src=item.image
+          class="slide__image"
+      %}
+      {% endfor %}
+    </div>
+  </div>
+  <div class="thumbnails">
     {% for item in page.carousel %}
-    {% include components/img.html
+    <button class="btn-thumb" type="button" name="button" onclick="showSlides({{ forloop.index0 }})" aria-label="display image">
+    {% include components/img-thumb.html
         src=item.image
-        class="slide__image"
+        class="slide-thumb"
     %}
+  </button>
     {% endfor %}
   </div>
-
 <script type="text/javascript" src="{{ '/assets/js/slides.js' | relative_url }}"></script>
 </section>
