made main menu generate from forestry template

--- a/_includes/components/img.html
+++ b/_includes/components/img.html
@@ -1,6 +1,6 @@
 {%
   picture default
   {{ include.src }}
-  --alt {{ include.alt }}
+  --alt "{{ include.alt }}"
   --img class="{{ include.class }}"
 %}
