--- a/_sass/sections/_carousel.sass
+++ b/_sass/sections/_carousel.sass
@@ -36,12 +36,27 @@
   align-items: center
   justify-content: center
   order: 2
+  background: black
   @include tablet
     width: calc(100% - 96px)
 
-.slide__image
+  iframe
+    height: 500px
+    width: 100%
+
+.slide-image
   max-height: 100%
   width: auto
+  background: green
+
+.slide-embed
+  max-height: 100%
+  width: auto
+  display: flex
+  align-items: center
+  justify-content: center
+
+
 
 .thumbnails
   padding-top: 4px
