adjusted info section

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-{% include sections/description.html %}
+{% include sections/info.html %}
 {% include sections/carousel.html %}
 {% include sections/detail.html %}
