--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -11,5 +11,7 @@
 @import layouts/menu
 @import layouts/footer
 
+@import sections/big-text
 @import sections/carousel
-@import sections/description
+@import sections/detail
+@import sections/info
