fixed discernable link, and preload fonts

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <!-- Navigation -->
   <nav id="primary-menu">
     <!-- Site Branding and Home Button -->
-    <a href="{{ '/' | relative_url }}" class="header-logo">
+    <a href="{{ '/' | relative_url }}" class="header-logo" aria-label="Index">
       {% include components/img.html
           src="assets/images/tatlo-logo.jpg"
           alt="Tatlo logo"
