added images to dat-14 and fixed bug with spaces in image name

--- a/_includes/components/img.html
+++ b/_includes/components/img.html
@@ -1,6 +1,6 @@
 {%
   picture default
-  {{ include.src }}
+  "{{ include.src }}"
   --alt "{{ include.alt }}"
   --img class="{{ include.class }}"
 %}
