--- a/_includes/components/img-thumb.html
+++ b/_includes/components/img-thumb.html
@@ -1,6 +1,6 @@
 {%
   picture thumbnail
-  {{ include.src }}
-  --alt {{ include.alt }}
+  "{{ include.src }}"
+  --alt "{{ include.alt }}"
   --img class="{{ include.class }}"
 %}
