--- a/_sass/sections/_carousel.sass
+++ b/_sass/sections/_carousel.sass
@@ -44,6 +44,10 @@
     height: 500px
     width: 100%
 
+  .video-embed
+    height: 500px
+    width: 100%
+
 .slide-image
   max-height: 100%
   width: auto
