--- a/_sass/sections/_carousel.sass
+++ b/_sass/sections/_carousel.sass
@@ -45,8 +45,10 @@
     width: 100%
 
   .video-embed
-    height: 500px
     width: 100%
+    max-height: 100%
+    margin: auto
+    aspect-ratio: 16 / 9
 
 .slide-image
   max-height: 100%
