--- a/_sass/layouts/_footer.sass
+++ b/_sass/layouts/_footer.sass
@@ -1,9 +1,6 @@
 footer
-  margin: 16px
+  @include margin-std
 
-  @include tablet
-    margin: 16px 32px
-    
   display: flex
   flex-direction: row
   justify-content: space-between
