--- a/_sass/layouts/_header.sass
+++ b/_sass/layouts/_header.sass
@@ -1,8 +1,5 @@
 header
-  margin: 16px
-
-  @include tablet
-    margin: 16px 32px
+  @include margin-std
 
 #primary-menu
   display: flex
@@ -19,7 +16,6 @@ header
     align-items: flex-start
 
 .banner-img
-  padding: 1px 6px 1px 6px
   width: 55vw
   min-width: 210px
   max-width: 246px
