--- a/_sass/sections/_carousel.sass
+++ b/_sass/sections/_carousel.sass
@@ -36,7 +36,7 @@
   align-items: center
   justify-content: center
   order: 2
-  background: black
+  background: $black
   @include tablet
     width: calc(100% - 96px)
 
@@ -65,17 +65,31 @@
 
 
 .thumbnails
+
+  @include tablet
+    margin: 0 44px
+
   padding-top: 4px
-  display: flex
-  flex-wrap: wrap
-  justify-content: center
-  gap: 4px
+  display: grid
+  grid-template-columns: auto
+
+  @include mini
+    grid-template-columns: auto auto
+
+  @include medium
+    grid-template-columns: auto auto auto
+
+  @include desktop
+    grid-template-columns: auto auto auto auto
+
+
 
 .slide-thumb
-  width: 200px
+  border: 4px solid $white
+  font-size: 0
 
 .active
-  outline: 4px solid black
+  border: 4px solid $black
 
 .btn-thumb
     border: 0
