--- a/_includes/sections/carousel.html
+++ b/_includes/sections/carousel.html
@@ -1,5 +1,5 @@
 <section class="" aria-label="Gallery">
-  <div class="carousel">
+  <div class="carousel" id="carousel-section">
     <button class="carousel-btn carousel-back" type="button" name="button" aria-label="previous image" onclick="back()">
       {% include components/chevron-left.svg %}
     </button>
