--- a/_includes/sections/carousel.html
+++ b/_includes/sections/carousel.html
@@ -41,7 +41,7 @@
           class="slide-image"
           alt=item.alt_text
       %}
-      {% elsif item.template == "embed" %}
+      {% elsif item.template == "youtube" %}
       {% include components/img-thumb.html
           src=item.thumb
           class="slide-image"
