a bit more polish

--- a/_sass/layouts/_footer.sass
+++ b/_sass/layouts/_footer.sass
@@ -1,6 +1,9 @@
 footer
   @include margin-std
 
+
+
+.footer-content
   display: flex
   flex-direction: row
   justify-content: space-between
@@ -24,3 +27,11 @@ footer
     border-radius: 0
     color: black
     transition: all 0.5s ease-in-out
+
+.copyright
+  margin: 0
+
+.credit
+  font-size: 1.2rem
+  color: $black
+  text-decoration: none
