--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,21 @@
 <footer>
-  <p class="copyright">© TATLO</p>
-  <div class="social-container">
-    <a href="https://instagram.com/tatloinfo?igshid=YmMyMTA2M2Y=" class="social-link" aria-label="instagram">
-      {% include inline-svg/instagram-svgrepo-com.svg %}
-    </a>
-    <a href="https://tatloinfo.tumblr.com/" class="social-link" aria-label="Tumblr">
-      {% include inline-svg/tumblr-svgrepo-com.svg %}
-    </a>
-    <a href="https://vimeo.com/user50003977" class="social-link" aria-label="Vimeo">
-      {% include inline-svg/vimeo-square-svgrepo-com.svg %}
-    </a>
+  <div class="footer-content">
+    <div class="">
+
+    <p class="copyright">© TATLO</p>
+
   </div>
+    <div class="social-container">
+      <a href="https://instagram.com/tatloinfo?igshid=YmMyMTA2M2Y=" class="social-link" aria-label="instagram">
+        {% include inline-svg/instagram-svgrepo-com.svg %}
+      </a>
+      <a href="https://tatloinfo.tumblr.com/" class="social-link" aria-label="Tumblr">
+        {% include inline-svg/tumblr-svgrepo-com.svg %}
+      </a>
+      <a href="https://vimeo.com/user50003977" class="social-link" aria-label="Vimeo">
+        {% include inline-svg/vimeo-square-svgrepo-com.svg %}
+      </a>
+    </div>
+  </div>
+    <a href="https://nickdolf.com/" class="credit">webdev by nick</a>
 </footer>
